examples/test/testpolicy13936.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13936
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key16: value10
      key18: value39
      key10: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
      podSelector:
        matchLabels:
          key25: value19
